--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,8 +14,6 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v3
-      with:
-        path: server
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -23,10 +21,10 @@ jobs:
         dotnet-version: 6.0.x
         
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore server/TechRental.Server.sln
       
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore server/TechRental.Server.sln
       
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal server/TechRental.Server.sln
