--- a/server/Domain/TechRental.Domain.Core/TechRental.Domain.Core.csproj
+++ b/server/Domain/TechRental.Domain.Core/TechRental.Domain.Core.csproj
@@ -8,4 +8,8 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\TechRental.Domain.Common\TechRental.Domain.Common.csproj" />
+	</ItemGroup>
+
 </Project>
