--- a/server/Application/TechRental.DataAccess.Abstractions/TechRental.DataAccess.Abstractions.csproj
+++ b/server/Application/TechRental.DataAccess.Abstractions/TechRental.DataAccess.Abstractions.csproj
@@ -8,4 +8,12 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Domain\TechRental.Domain.Core\TechRental.Domain.Core.csproj" />
+	</ItemGroup>
+
 </Project>
