--- a/server/Infrastructure/TechRental.Infrastructure.DataAccess/TechRental.Infrastructure.DataAccess.csproj
+++ b/server/Infrastructure/TechRental.Infrastructure.DataAccess/TechRental.Infrastructure.DataAccess.csproj
@@ -8,4 +8,13 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Application\TechRental.DataAccess.Abstractions\TechRental.DataAccess.Abstractions.csproj" />
+	</ItemGroup>
+
 </Project>
