--- a/server/Application/TechRental.Application.Dto/TechRental.Application.Dto.csproj
+++ b/server/Application/TechRental.Application.Dto/TechRental.Application.Dto.csproj
@@ -8,4 +8,8 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Domain\TechRental.Domain.Core\TechRental.Domain.Core.csproj" />
+	</ItemGroup>
+
 </Project>
