--- a/server/Infrastructure/TechRental.Infrastructure.Mapping/TechRental.Infrastructure.Mapping.csproj
+++ b/server/Infrastructure/TechRental.Infrastructure.Mapping/TechRental.Infrastructure.Mapping.csproj
@@ -8,4 +8,8 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Application\TechRental.Application.Dto\TechRental.Application.Dto.csproj" />
+	</ItemGroup>
+
 </Project>
