feat: update Application.Abstractions dependencies

--- a/server/Application/TechRental.Application.Abstractions/TechRental.Application.Abstractions.csproj
+++ b/server/Application/TechRental.Application.Abstractions/TechRental.Application.Abstractions.csproj
@@ -8,4 +8,8 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\TechRental.Application.Dto\TechRental.Application.Dto.csproj" />
+	</ItemGroup>
+
 </Project>
