--- a/server/Infrastructure/TechRental.Infrastructure.Identity/TechRental.Infrastructure.Identity.csproj
+++ b/server/Infrastructure/TechRental.Infrastructure.Identity/TechRental.Infrastructure.Identity.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -7,5 +7,15 @@
 		<WarningLevel>5</WarningLevel>
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Application\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj" />
+	  <ProjectReference Include="..\..\Application\TechRental.Application.Dto\TechRental.Application.Dto.csproj" />
+	</ItemGroup>
 
 </Project>
