--- a/server/Application/TechRental.Application.Contracts/TechRental.Application.Contracts.csproj
+++ b/server/Application/TechRental.Application.Contracts/TechRental.Application.Contracts.csproj
@@ -8,4 +8,17 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\TechRental.Application.Dto\TechRental.Application.Dto.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<InternalsVisibleTo Include="TechRental.Application.Handlers" />
+		<InternalsVisibleTo Include="TechRental.Application.Presentation" />
+	</ItemGroup>
+
 </Project>
