--- a/server/Presentation/TechRental.Presentation.Controllers/TechRental.Presentation.Controllers.csproj
+++ b/server/Presentation/TechRental.Presentation.Controllers/TechRental.Presentation.Controllers.csproj
@@ -1,4 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
+
+	<PropertyGroup>
+		<OutputType>Library</OutputType>
+	</PropertyGroup>
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
