--- a/server/Application/TechRental.Application.Contracts/TechRental.Application.Contracts.csproj
+++ b/server/Application/TechRental.Application.Contracts/TechRental.Application.Contracts.csproj
@@ -18,7 +18,7 @@
 
 	<ItemGroup>
 		<InternalsVisibleTo Include="TechRental.Application.Handlers" />
-		<InternalsVisibleTo Include="TechRental.Application.Presentation" />
+		<InternalsVisibleTo Include="TechRental.Presentation.Controllers" />
 	</ItemGroup>
 
 </Project>
