--- a/server/Application/TechRental.Application.Contracts/TechRental.Application.Contracts.csproj
+++ b/server/Application/TechRental.Application.Contracts/TechRental.Application.Contracts.csproj
@@ -19,6 +19,7 @@
 	<ItemGroup>
 		<InternalsVisibleTo Include="TechRental.Application.Handlers" />
 		<InternalsVisibleTo Include="TechRental.Presentation.Controllers" />
+		<InternalsVisibleTo Include="TechRental.Presentation.WebAPI" />
 	</ItemGroup>
 
 </Project>
