--- a/server/Presentation/TechRental.Presentation.WebAPI/TechRental.Presentation.WebAPI.csproj
+++ b/server/Presentation/TechRental.Presentation.WebAPI/TechRental.Presentation.WebAPI.csproj
@@ -8,4 +8,19 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Serilog" Version="2.12.0" />
+	  <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+	  <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
+	  <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Application\TechRental.Application\TechRental.Application.csproj" />
+	  <ProjectReference Include="..\..\Infrastructure\TechRental.Infrastructure.DataAccess\TechRental.Infrastructure.DataAccess.csproj" />
+	  <ProjectReference Include="..\..\Infrastructure\TechRental.Infrastructure.Identity\TechRental.Infrastructure.Identity.csproj" />
+	  <ProjectReference Include="..\TechRental.Presentation.Controllers\TechRental.Presentation.Controllers.csproj" />
+	</ItemGroup>
+
 </Project>
