feat: add identity controller

--- a/server/Presentation/TechRental.Presentation.Controllers/TechRental.Presentation.Controllers.csproj
+++ b/server/Presentation/TechRental.Presentation.Controllers/TechRental.Presentation.Controllers.csproj
@@ -12,4 +12,14 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="MediatR" Version="12.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Application\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj" />
+	  <ProjectReference Include="..\..\Application\TechRental.Application.Contracts\TechRental.Application.Contracts.csproj" />
+	  <ProjectReference Include="..\TechRental.Presentation.Contracts\TechRental.Presentation.Contracts.csproj" />
+	</ItemGroup>
+
 </Project>
