feat: add db names to configuration

--- a/server/Presentation/TechRental.Presentation.WebAPI/appsettings.json
+++ b/server/Presentation/TechRental.Presentation.WebAPI/appsettings.json
@@ -13,6 +13,10 @@
     "Password": "postgres",
     "SslMode": "Prefer"
   },
+  "DbNamesConfiguration": {
+    "ApplicationDbName": "tech",
+    "IdentityDbName": "tech-identity"
+  },
   "Identity": {
     "IdentityConfiguration": {
       "ExpiresHours": 1,
