--- a/server/Presentation/TechRental.Presentation.WebAPI/TechRental.Presentation.WebAPI.csproj
+++ b/server/Presentation/TechRental.Presentation.WebAPI/TechRental.Presentation.WebAPI.csproj
@@ -6,9 +6,13 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<WarningLevel>5</WarningLevel>
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+		<UserSecretsId>354d2a7f-4eab-4668-8f7b-d12abbde1cac</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileContext>..\..</DockerfileContext>
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
 	  <PackageReference Include="Serilog" Version="2.12.0" />
 	  <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
 	  <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
