--- a/server/Presentation/TechRental.Presentation.WebAPI/appsettings.json
+++ b/server/Presentation/TechRental.Presentation.WebAPI/appsettings.json
@@ -6,9 +6,16 @@
     }
   },
   "AllowedHosts": "*",
-  "PostgresConfiguration": {
+  "DevelopmentPostgresConfiguration": {
     "Host": "localhost",
     "Port": 1433,
+    "Username": "postgres",
+    "Password": "postgres",
+    "SslMode": "Prefer"
+  },
+  "ProductionPostgresConfiguration": {
+    "Host": "database",
+    "Port": 5432,
     "Username": "postgres",
     "Password": "postgres",
     "SslMode": "Prefer"
