feat: make swagger startup page

--- a/server/Presentation/TechRental.Presentation.WebAPI/Properties/launchSettings.json
+++ b/server/Presentation/TechRental.Presentation.WebAPI/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "TechRental.Presentation.WebAPI": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
