--- a/server/Presentation/TechRental.Presentation.WebAPI/appsettings.Production.json
+++ b/server/Presentation/TechRental.Presentation.WebAPI/appsettings.Production.json
@@ -1,11 +1,11 @@
 {
   "DbNamesConfiguration": {
-    "ApplicationDbName": "tech-dev",
-    "IdentityDbName": "tech-identity-dev"
+    "ApplicationDbName": "tech",
+    "IdentityDbName": "tech-identity"
   },
   "PostgresConfiguration": {
-    "Host": "localhost",
-    "Port": 1433,
+    "Host": "database",
+    "Port": 5432,
     "Username": "postgres",
     "Password": "postgres",
     "SslMode": "Prefer"
