feat: modify infrastructure identity deps

--- a/server/Infrastructure/TechRental.Infrastructure.Identity/TechRental.Infrastructure.Identity.csproj
+++ b/server/Infrastructure/TechRental.Infrastructure.Identity/TechRental.Infrastructure.Identity.csproj
@@ -16,6 +16,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Application\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj" />
 	  <ProjectReference Include="..\..\Application\TechRental.Application.Dto\TechRental.Application.Dto.csproj" />
+	  <ProjectReference Include="..\..\Domain\TechRental.Domain.Common\TechRental.Domain.Common.csproj" />
 	</ItemGroup>
 
 </Project>
