feat: modify mappings

--- a/server/Infrastructure/TechRental.Infrastructure.Mapping/TechRental.Infrastructure.Mapping.csproj
+++ b/server/Infrastructure/TechRental.Infrastructure.Mapping/TechRental.Infrastructure.Mapping.csproj
@@ -10,6 +10,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Application\TechRental.Application.Dto\TechRental.Application.Dto.csproj" />
+	  <ProjectReference Include="..\..\Domain\TechRental.Domain.Core\TechRental.Domain.Core.csproj" />
 	</ItemGroup>
 
 </Project>
