--- a/server/Presentation/TechRental.Presentation.Controllers/TechRental.Presentation.Controllers.csproj
+++ b/server/Presentation/TechRental.Presentation.Controllers/TechRental.Presentation.Controllers.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
@@ -10,10 +10,12 @@
 		<Nullable>enable</Nullable>
 		<WarningLevel>5</WarningLevel>
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="MediatR" Version="12.0.1" />
+		<PackageReference Include="MediatR" Version="12.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -21,9 +23,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Application\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj" />
-	  <ProjectReference Include="..\..\Application\TechRental.Application.Contracts\TechRental.Application.Contracts.csproj" />
-	  <ProjectReference Include="..\TechRental.Presentation.Contracts\TechRental.Presentation.Contracts.csproj" />
+		<ProjectReference Include="..\..\Application\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj" />
+		<ProjectReference Include="..\..\Application\TechRental.Application.Contracts\TechRental.Application.Contracts.csproj" />
+		<ProjectReference Include="..\TechRental.Presentation.Contracts\TechRental.Presentation.Contracts.csproj" />
 	</ItemGroup>
 
 </Project>
