--- a/server/Application/TechRental.Application.Handlers/TechRental.Application.Handlers.csproj
+++ b/server/Application/TechRental.Application.Handlers/TechRental.Application.Handlers.csproj
@@ -10,6 +10,8 @@
 
 	<ItemGroup>
 	  <PackageReference Include="MediatR" Version="12.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
