--- a/server/Presentation/TechRental.Presentation.Contracts/TechRental.Presentation.Contracts.csproj
+++ b/server/Presentation/TechRental.Presentation.Contracts/TechRental.Presentation.Contracts.csproj
@@ -8,4 +8,8 @@
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Application\TechRental.Application.Dto\TechRental.Application.Dto.csproj" />
+	</ItemGroup>
+
 </Project>
