feat: add pagination configuration in appsettings

--- a/server/Presentation/TechRental.Presentation.WebAPI/appsettings.json
+++ b/server/Presentation/TechRental.Presentation.WebAPI/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "Pagination": {
+    "PageSize": 20
+  },
   "Identity": {
     "IdentityConfiguration": {
       "ExpiresHours": 1,
