--- a/server/Infrastructure/TechRental.Infrastructure.Identity/TechRental.Infrastructure.Identity.csproj
+++ b/server/Infrastructure/TechRental.Infrastructure.Identity/TechRental.Infrastructure.Identity.csproj
@@ -17,6 +17,7 @@
 	  <ProjectReference Include="..\..\Application\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj" />
 	  <ProjectReference Include="..\..\Application\TechRental.Application.Dto\TechRental.Application.Dto.csproj" />
 	  <ProjectReference Include="..\..\Domain\TechRental.Domain.Common\TechRental.Domain.Common.csproj" />
+	  <ProjectReference Include="..\..\Domain\TechRental.Domain.Core\TechRental.Domain.Core.csproj" />
 	</ItemGroup>
 
 </Project>
