--- a/.github/workflows/client-ci.yml
+++ b/.github/workflows/client-ci.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x, 19.x]
+        node-version: 19.x
 
     steps:
     - uses: actions/checkout@v3
@@ -25,4 +25,3 @@ jobs:
         cache-dependency-path: client/package-lock.json
     - run: npm --prefix ./client/ ci
     - run: npm run --prefix ./client/ build --if-present
-    - run: npm --prefix ./client/ test
