--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "typescript-cookie": "^1.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
