--- a/client/.env.development
+++ b/client/.env.development
@@ -1,3 +1,3 @@
 REACT_APP_IDENTITY_API="http://localhost:8080/api/identity"
 REACT_APP_USER_API="http://localhost:8080/api/User"
-REACT_APP_PRODUCT_API="http://localhost:8080/api/Product"
+REACT_APP_PRODUCT_API="http://localhost:8080/api/Order"
