feat: remove lib versions and build props from projects

--- a/server/Application/TechRental.Application.Handlers/TechRental.Application.Handlers.csproj
+++ b/server/Application/TechRental.Application.Handlers/TechRental.Application.Handlers.csproj
@@ -1,25 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<WarningLevel>5</WarningLevel>
-		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-	</PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="MediatR"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder"/>
+    </ItemGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="MediatR" Version="12.0.1" />
-	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
-	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\..\Infrastructure\TechRental.Infrastructure.Mapping\TechRental.Infrastructure.Mapping.csproj" />
-	  <ProjectReference Include="..\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj" />
-	  <ProjectReference Include="..\TechRental.Application.Common\TechRental.Application.Common.csproj" />
-	  <ProjectReference Include="..\TechRental.Application.Contracts\TechRental.Application.Contracts.csproj" />
-	  <ProjectReference Include="..\TechRental.DataAccess.Abstractions\TechRental.DataAccess.Abstractions.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Infrastructure\TechRental.Infrastructure.Mapping\TechRental.Infrastructure.Mapping.csproj"/>
+        <ProjectReference Include="..\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj"/>
+        <ProjectReference Include="..\TechRental.Application.Common\TechRental.Application.Common.csproj"/>
+        <ProjectReference Include="..\TechRental.Application.Contracts\TechRental.Application.Contracts.csproj"/>
+        <ProjectReference Include="..\TechRental.DataAccess.Abstractions\TechRental.DataAccess.Abstractions.csproj"/>
+    </ItemGroup>
 
 </Project>
