--- a/server/Presentation/TechRental.Presentation.WebAPI/TechRental.Presentation.WebAPI.csproj
+++ b/server/Presentation/TechRental.Presentation.WebAPI/TechRental.Presentation.WebAPI.csproj
@@ -1,31 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<WarningLevel>5</WarningLevel>
-		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-		<UserSecretsId>354d2a7f-4eab-4668-8f7b-d12abbde1cac</UserSecretsId>
-		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-		<DockerfileContext>..\..</DockerfileContext>
-	</PropertyGroup>
+    <PropertyGroup>
+        <UserSecretsId>354d2a7f-4eab-4668-8f7b-d12abbde1cac</UserSecretsId>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <DockerfileContext>..\..</DockerfileContext>
+    </PropertyGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
-	  <PackageReference Include="Serilog" Version="2.12.0" />
-	  <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
-	  <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
-	  <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
-	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets"/>
+        <PackageReference Include="Serilog"/>
+        <PackageReference Include="Serilog.AspNetCore"/>
+        <PackageReference Include="Serilog.Extensions.Hosting"/>
+        <PackageReference Include="Serilog.Sinks.Console"/>
+        <PackageReference Include="Swashbuckle.AspNetCore"/>
+    </ItemGroup>
 
-	<ItemGroup>
-	  <ProjectReference Include="..\..\Application\TechRental.Application\TechRental.Application.csproj" />
-	  <ProjectReference Include="..\..\Infrastructure\TechRental.Infrastructure.DataAccess\TechRental.Infrastructure.DataAccess.csproj" />
-	  <ProjectReference Include="..\..\Infrastructure\TechRental.Infrastructure.Identity\TechRental.Infrastructure.Identity.csproj" />
-	  <ProjectReference Include="..\TechRental.Presentation.Controllers\TechRental.Presentation.Controllers.csproj" />
-	  <ProjectReference Include="..\TechRental.Presentation.Middlewares\TechRental.Presentation.Middlewares.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Application\TechRental.Application\TechRental.Application.csproj"/>
+        <ProjectReference Include="..\..\Infrastructure\TechRental.Infrastructure.DataAccess\TechRental.Infrastructure.DataAccess.csproj"/>
+        <ProjectReference Include="..\..\Infrastructure\TechRental.Infrastructure.Identity\TechRental.Infrastructure.Identity.csproj"/>
+        <ProjectReference Include="..\TechRental.Presentation.Controllers\TechRental.Presentation.Controllers.csproj"/>
+        <ProjectReference Include="..\TechRental.Presentation.Middlewares\TechRental.Presentation.Middlewares.csproj"/>
+    </ItemGroup>
 
 </Project>
