--- a/server/Application/TechRental.Application.Contracts/TechRental.Application.Contracts.csproj
+++ b/server/Application/TechRental.Application.Contracts/TechRental.Application.Contracts.csproj
@@ -1,25 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<WarningLevel>5</WarningLevel>
-		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-	</PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="MediatR.Contracts"/>
+    </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="MediatR.Contracts" Version="2.0.1" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\TechRental.Application.Dto\TechRental.Application.Dto.csproj"/>
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\TechRental.Application.Dto\TechRental.Application.Dto.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<InternalsVisibleTo Include="TechRental.Application.Handlers" />
-		<InternalsVisibleTo Include="TechRental.Presentation.Controllers" />
-		<InternalsVisibleTo Include="TechRental.Presentation.WebAPI" />
-	</ItemGroup>
+    <ItemGroup>
+        <InternalsVisibleTo Include="TechRental.Application.Handlers"/>
+        <InternalsVisibleTo Include="TechRental.Presentation.Controllers"/>
+        <InternalsVisibleTo Include="TechRental.Presentation.WebAPI"/>
+    </ItemGroup>
 
 </Project>
