--- a/server/Application/TechRental.Application/TechRental.Application.csproj
+++ b/server/Application/TechRental.Application/TechRental.Application.csproj
@@ -1,21 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<WarningLevel>5</WarningLevel>
-		<TreatWarningAsErrors>True</TreatWarningAsErrors>
-	</PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"/>
+    </ItemGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj" />
-	  <ProjectReference Include="..\TechRental.Application.Common\TechRental.Application.Common.csproj" />
-	  <ProjectReference Include="..\TechRental.Application.Handlers\TechRental.Application.Handlers.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj"/>
+        <ProjectReference Include="..\TechRental.Application.Common\TechRental.Application.Common.csproj"/>
+        <ProjectReference Include="..\TechRental.Application.Handlers\TechRental.Application.Handlers.csproj"/>
+    </ItemGroup>
 
 </Project>
