--- a/server/Infrastructure/TechRental.Infrastructure.DataAccess/TechRental.Infrastructure.DataAccess.csproj
+++ b/server/Infrastructure/TechRental.Infrastructure.DataAccess/TechRental.Infrastructure.DataAccess.csproj
@@ -1,20 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<WarningLevel>5</WarningLevel>
-		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-	</PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design"/>
+    </ItemGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
-	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\..\Application\TechRental.DataAccess.Abstractions\TechRental.DataAccess.Abstractions.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Application\TechRental.DataAccess.Abstractions\TechRental.DataAccess.Abstractions.csproj"/>
+    </ItemGroup>
 
 </Project>
