--- a/server/Infrastructure/TechRental.Infrastructure.Identity/TechRental.Infrastructure.Identity.csproj
+++ b/server/Infrastructure/TechRental.Infrastructure.Identity/TechRental.Infrastructure.Identity.csproj
@@ -1,23 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<WarningLevel>5</WarningLevel>
-		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-	</PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
+    </ItemGroup>
 
-	<ItemGroup>
-	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
-	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\..\Application\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj" />
-	  <ProjectReference Include="..\..\Application\TechRental.Application.Dto\TechRental.Application.Dto.csproj" />
-	  <ProjectReference Include="..\..\Domain\TechRental.Domain.Common\TechRental.Domain.Common.csproj" />
-	  <ProjectReference Include="..\..\Domain\TechRental.Domain.Core\TechRental.Domain.Core.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Application\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj"/>
+        <ProjectReference Include="..\..\Application\TechRental.Application.Dto\TechRental.Application.Dto.csproj"/>
+        <ProjectReference Include="..\..\Domain\TechRental.Domain.Common\TechRental.Domain.Common.csproj"/>
+        <ProjectReference Include="..\..\Domain\TechRental.Domain.Core\TechRental.Domain.Core.csproj"/>
+    </ItemGroup>
 
 </Project>
