--- a/server/Presentation/TechRental.Presentation.Controllers/TechRental.Presentation.Controllers.csproj
+++ b/server/Presentation/TechRental.Presentation.Controllers/TechRental.Presentation.Controllers.csproj
@@ -1,31 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-	<PropertyGroup>
-		<OutputType>Library</OutputType>
-	</PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Library</OutputType>
+    </PropertyGroup>
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<WarningLevel>5</WarningLevel>
-		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<NoWarn>$(NoWarn);1591</NoWarn>
-	</PropertyGroup>
+    <PropertyGroup>
+        <NoWarn>$(NoWarn);1591</NoWarn>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="MediatR" Version="12.0.1" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="MediatR"/>
+    </ItemGroup>
 
-	<ItemGroup>
-		<None Remove="Properties\" />
-	</ItemGroup>
+    <ItemGroup>
+        <None Remove="Properties\"/>
+    </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\..\Application\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj" />
-		<ProjectReference Include="..\..\Application\TechRental.Application.Contracts\TechRental.Application.Contracts.csproj" />
-		<ProjectReference Include="..\TechRental.Presentation.Contracts\TechRental.Presentation.Contracts.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Application\TechRental.Application.Abstractions\TechRental.Application.Abstractions.csproj"/>
+        <ProjectReference Include="..\..\Application\TechRental.Application.Contracts\TechRental.Application.Contracts.csproj"/>
+        <ProjectReference Include="..\TechRental.Presentation.Contracts\TechRental.Presentation.Contracts.csproj"/>
+    </ItemGroup>
 
 </Project>
